# epub2audio

./: .gitignore  LICENSE  README.md  pyproject.toml
epub2audio/: app.py  audio.py  common.py  converter.py  epub.py  error.py  patches.py  preprocess.py  synthesizer.py
