[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "epub2audio"
version = "0.1.0"
authors = [
    { name = "Samuel Laurén", email = "samuel.lauren@iki.fi" },
]
description = "Convert EPub files to audiobooks"
requires-python = ">=3.11"
keywords = ["epub", "audiobook", "convert", "text-to-speech"]
license = { text = "MIT" }
dependencies = [
    "lxml == 4.9.*",
    "mutagen == 1.27.*",
    "TTS",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Typing :: Typed",
]

[project.scripts]
epub2audio = "epub2audio.app:main"

[tool.mypy]
strict = true

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["UP", "I"]
